simtbx.log
*** Error compiling 'simtbx/nanoBragg/brunger_example/run_example.py'...
  File "simtbx/nanoBragg/brunger_example/run_example.py", line 50
    print "dispsteps=",SIM.dispsteps
                     ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("dispsteps=",SIM.dispsteps)?

*** Error compiling 'simtbx/nanoBragg/tst_nanoBragg_minimal.py'...
  File "simtbx/nanoBragg/tst_nanoBragg_minimal.py", line 50
    print "GOTHERE seed=",SIM.seed
                        ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "GOTHERE seed=",SIM.seed)?

